--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="referrer" content="origin" referrerpolicy="no-referrer-when-downgrade"/>
-  <title>Forkfam</title>
+  <title>forkfam</title>
   <base href="/" >
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
